[package]
name = "appearance-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std"] }
ashpd = { version = "0.9.1", default-features = false, features = ["tokio"] }
clap = { version = "4.5.16", default-features = false, features = ["derive", "color", "error-context", "help", "suggestions", "std", "usage", "wrap_help", "unicode"] }
culpa = "1.0.2"
futures = { version = "0.3.30", default-features = false }
serde = { version = "1.0.208", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.125", default-features = false, features = ["alloc"] }
serde_with = { version = "3.9.0", default-features = false, features = ["macros", "std"] }
tokio = { version = "1.39.2", default-features = false, features = ["macros", "rt"] }
